--- a/index.html
+++ b/index.html
@@ -72,6 +72,42 @@
             </div>
           </div>
         </div>
+
+        <div class="container">
+          <div class="resume__block">
+            <div class="intro">
+              <div class="intro__icon-wrapper">
+                <svg
+                  class="intro__icon"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 512 512"
+                >
+                  <path
+                    d="M464 256h-80v-64c0-35.3 28.7-64 64-64h8c13.3 0 24-10.7
+                    24-24V56c0-13.3-10.7-24-24-24h-8c-88.4 0-160 71.6-160 160v240c0
+                    26.5 21.5 48 48 48h128c26.5 0 48-21.5
+                    48-48V304c0-26.5-21.5-48-48-48zm-288 0H96v-64c0-35.3 28.7-64
+                    64-64h8c13.3 0 24-10.7 24-24V56c0-13.3-10.7-24-24-24h-8C71.6 32 0
+                    103.6 0 192v240c0 26.5 21.5 48 48 48h128c26.5 0
+                    48-21.5 48-48V304c0-26.5-21.5-48-48-48z"
+                  ></path>
+                </svg>
+              </div>
+              <p class="intro_text">
+                For over three years, I have specialized in creating JavaScript
+                applications for small and medium-sized businesses, with a
+                primary focus on Web Development using React.js and Next.js. I
+                possess a strong background in developing and delivering
+                high-quality web applications across various industries. My
+                expertise spans frontend project architecture, API integration,
+                and performance optimization. I am proficient in a wide array of
+                tools and technologies, with a proven track record of
+                successfully managing and implementing projects from scratch,
+                often serving as the lead developer in a team.
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
     </main>
   </body>
