--- a/index.html
+++ b/index.html
@@ -108,6 +108,18 @@
             </div>
           </div>
         </div>
+
+        <div class="container">
+          <div class="resume__block">
+            <div class="skills">
+              <h3 class="skills__header">Skills</h3>
+              <p class="skills__text">
+                Problem solving, Continuous Learning, Team Collaboration,
+                Project Management
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
     </main>
   </body>
