--- a/index.html
+++ b/index.html
@@ -120,6 +120,69 @@
             </div>
           </div>
         </div>
+
+        <div class="container">
+          <div class="resume__block">
+            <div class="main-info fh">
+              <div class="experiences">
+                <h3 class="experiences__header">Experience</h3>
+                <div class="experiences__company">
+                  <div class="experiences__company-header">
+                    <span class="experiences__company-header-durability"
+                      >2024-Present</span
+                    >
+                    <h3 class="experiences__company-header-name">
+                      Linkup Studio
+                    </h3>
+                  </div>
+
+                  <div class="experiences__company-project">
+                    <span class="experiences__company-project-role"
+                      >Frontend Developer</span
+                    >
+                    <h3 class="experiences__company-project-name">
+                      Areas of Expertise:
+                    </h3>
+                    <ul class="experiences__company-project-responsibilities">
+                      <li>Building applications from scratch</li>
+                      <li>Migrating legacy systems to modern interfaces</li>
+                      <li>Refactoring and modernizing existing codebases</li>
+                      <li>Implement WEB app based on Mobile app</li>
+                      <li>Optimizing web application performance</li>
+                      <li>API integration</li>
+                    </ul>
+                  </div>
+                </div>
+
+                <div class="experiences__company">
+                  <div class="experiences__company-header">
+                    <span class="experiences__company-header-durability"
+                      >2022-2024</span
+                    >
+                    <h3 class="experiences__company-header-name">Magnise</h3>
+                  </div>
+
+                  <div class="experiences__company-project">
+                    <span class="experiences__company-project-role"
+                      >Frontend Developer</span
+                    >
+                    <h3 class="experiences__company-project-name">
+                      Areas of Expertise:
+                    </h3>
+                    <ul class="experiences__company-project-responsibilities">
+                      <li>CRM & ERP systems</li>
+                      <li>Trading platforms</li>
+                      <li>Microsoft Add-ins</li>
+                      <li>Application development systems</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+
+              <div class="additional-info fv"></div>
+            </div>
+          </div>
+        </div>
       </div>
     </main>
   </body>
