--- a/index.html
+++ b/index.html
@@ -179,7 +179,32 @@
                 </div>
               </div>
 
-              <div class="additional-info fv"></div>
+              <div class="additional-info fv">
+                <div class="additional-info__education">
+                  <h3 class="additional-info__education-header">Education</h3>
+                  <div class="additional-info__education-university">
+                    <span
+                      class="additional-info__education-university-durability"
+                    >
+                      2019 - 2023
+                    </span>
+                    <h3
+                      class="additional-info__education-university-speciality"
+                    >
+                      Computer Science
+                    </h3>
+                    <p class="additional-info__education-university-name">
+                      Kyiv National Economics University
+                    </p>
+                  </div>
+                </div>
+
+                <div class="additional-info__languages">
+                  <h3 class="additional-info__languages-header">Languages</h3>
+                  <p class="additional-info__languages-item">English</p>
+                  <p class="additional-info__languages-item">Ukrainian</p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
